[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (11).png" type="Texture" id=1]
[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (8).png" type="Texture" id=2]
[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (9).png" type="Texture" id=3]
[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (10).png" type="Texture" id=4]
[ext_resource path="res://objects/enventary/eventary.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.75, 98.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.875, 49.25 )

[node name="eventary" type="Node2D"]
script = ExtResource( 5 )

[node name="Pixil-frame-0(8)" type="Sprite" parent="."]
position = Vector2( 941.25, 548.5 )
scale = Vector2( 86.775, 45.45 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(10)" type="Sprite" parent="."]
position = Vector2( 1719, 180 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="sword" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
position = Vector2( 337.25, 348.75 )
shape = SubResource( 1 )

[node name="Pixil-frame-0(11)" type="Sprite" parent="sword"]
position = Vector2( 338, 347 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(9)" type="Sprite" parent="sword/Pixil-frame-0(11)"]
position = Vector2( 2.1, -1.3 )
scale = Vector2( 0.675, 0.695 )
texture = ExtResource( 3 )

[node name="exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2( 1716.88, 181.75 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="sword" to="." method="_on_sword_mouse_entered"]
[connection signal="mouse_exited" from="sword" to="." method="_on_sword_mouse_exited"]
[connection signal="mouse_entered" from="exit" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="exit" to="." method="_on_Area2D2_mouse_exited"]
